--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div id="test_frame" class="frame">
+    <!-- <div id="test_frame" class="frame">
       <span>Test Functions</span>
       <div id="test_buttons_a">
         <button id="add_1" class="na-button na-button-red">Add 1</button>
@@ -33,7 +33,6 @@
         <button id="sort_uid" class="na-button na-button-green">Sort By UID</button>
         <button id="sort_address" class="na-button na-button-green">Sort By Address</button>
         <button id="sort_manufacturer" class="na-button na-button-green">Sort By Manufacturer</button>
-        <button id="device_list">Device List</button>
       </div>
     </div>
     <div id="list_frame" class="frame">
@@ -51,6 +50,7 @@
           </tr>
         </table>
       </div>
-    </div>
+    </div> -->
+    <main></main>
   </body>
 </html>
